src/test/deca/syntax/invalid/provided/TestListDec_Inst.deca
// Description:
//   Programme qui ne respecte pas la grammaire concrète
// Résultats:
//   Erreur listdecl + listinst + listdecl
//   :5:10: no viable alternative at input 'y'
{
    int x = 2 ;
    x = 6;
    float y = 7;
}
